pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints2.pkl
foo: String(startsWith(bub.name)) = "Huzzah"

bub: Person = new { name = "Bub" }

class Person {
  name: String
}
